--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,9 +20,7 @@ jobs:
         default: 'latest'
     steps:
       - checkout
-      - setup_remote_docker:
-          # https://circleci.com/docs/2.0/building-docker-images/#docker-version
-          version: 20.10.18
+      - setup_remote_docker
       - run:
           name: Build image
           command: |
@@ -54,7 +52,7 @@ jobs:
           name: Publish image
           command: |
             # login credentials should be provided via context or project environment variables.
-            docker login $DOCKER_REGISTRY --username $DOCKER_LOGIN -u $DOCKER_PASSWORD
+            docker login -u $DOCKER_LOGIN -u $DOCKER_PASSWORD
 
             docker image push --all-tags "${DOCKER_REGISTRY}/${DOCKER_USER}/<< parameters.image_name >>"
 
