--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,6 +10,10 @@ workflows:
       - aws-ecr/build_and_push_image:
           account_id: ${AWS_ACCOUNT_ID}
           auth:
+            - aws-cli/store_credentials:
+                aws-access-key-id: ${AWS_ACCESS_KEY_ID}
+                aws-secret-access-key: ${AWS_SECRET_ACCESS_KEY}
+                aws-default-region: 'us-east-2'
             - aws-cli/setup:
                 role_arn: arn:aws:iam::483285841698:role/jkg
           dockerfile: Dockerfile
@@ -18,3 +22,5 @@ workflows:
           repo: jkg
           repo_policy_path: ./policy.json
           tag: latest,myECRRepoTag
+          context: aws
+
