try without repo policy

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,6 +17,6 @@ workflows:
           push_image: true
           region: 'us-east-2'
           repo: jkg
-          repo_policy_path: ./policy.json
+          # repo_policy_path: ./policy.json
           tag: latest,myECRRepoTag
           context: aws
