--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -129,5 +129,7 @@ workflows:
     jobs:
       - build:
           target: shared
-      - lint
-      - test
+      - lint:
+          target: shared
+      - test:
+          target: shared
