fix: rm use of aws-cli orb; AWS CLI already installed

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,6 @@ version: 2.1
 
 orbs: 
   aws-ecr: circleci/aws-ecr@9.0.1
-  aws-cli: circleci/aws-cli@4.1.2
 
 workflows:
   build_publish_aws_ecr:
@@ -11,7 +10,9 @@ workflows:
           # uses the AWS_* project env vars to authenticate
           repo: kelvintaywl/fancy-nginx-cached
           # NOTE:
-          # I added this, since aws-ecr/ecr-login command assumes the AWS CLI is available
+          # aws-ecr/ecr-login command assumes the AWS CLI is available
           # See https://circleci.com/developer/orbs/orb/circleci/aws-ecr?version=9.0.0#commands-ecr_login
-          auth:
-            - aws-cli/setup
+          # Depending on your executor, you may need to install the AWS CLI then.
+          # The aws-ecr/default executor resolves to ubuntu-2004:2022.04 machine.
+          # It comes with AWS CLI pre-installed.
+          auth: []
