fix: set up AWS profile

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,6 +2,7 @@ version: 2.1
 
 orbs: 
   aws-ecr: circleci/aws-ecr@9.0.1
+  aws-cli: circleci/aws-cli@4.1.2
 
 workflows:
   build_publish_aws_ecr:
@@ -15,4 +16,9 @@ workflows:
           # Depending on your executor, you may need to install the AWS CLI then.
           # The aws-ecr/default executor resolves to ubuntu-2004:2022.04 machine.
           # It comes with AWS CLI pre-installed.
-          auth: []
+          # However, the ECR login assumes a "default" AWS profile is set.
+          # Hence, I end up importing the aws-cli, to set up a profile for convenience.
+          profile_name: dev
+          auth:
+            - aws-cli/setup:
+                profile_name: dev
