--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,3 +22,5 @@ workflows:
           auth:
             - aws-cli/setup:
                 profile_name: dev
+            - run: |
+                aws sts get-caller-identity --profile dev
