--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,6 @@ version: 2.1
 
 orbs: 
   aws-ecr: circleci/aws-ecr@9.0.1
-  # aws-cli: circleci/aws-cli@3.1.5
 
 workflows:
   build_publish_aws_ecr:
@@ -10,12 +9,26 @@ workflows:
       - aws-ecr/build_and_push_image:
           # uses the AWS_* project env vars to authenticate
           repo: kelvintaywl/fancy-nginx-cached
+          # aws-ecr/ecr-login assumes we have an AWS profile (defaults to default)
+          # I will explicitly set up a `dev` profile.
+          # See auth steps below.
+          profile_name: dev
           # NOTE:
           # aws-ecr/ecr-login command assumes the AWS CLI is available
           # See https://circleci.com/developer/orbs/orb/circleci/aws-ecr?version=9.0.0#commands-ecr_login
           # Depending on your executor, you may need to install the AWS CLI then.
           # The aws-ecr/default executor resolves to ubuntu-2004:2022.04 machine.
           auth:
-            - run: |
-                aws configure list
-                aws sts get-caller-identity
+            - run:
+                name: setup AWS profile
+                command: |
+                  aws configure set aws_access_key_id \
+                      "$AWS_ACCESS_KEY_ID" \
+                      --profile "dev"
+
+                  aws configure set aws_secret_access_key \
+                      "$AWS_SECRET_ACCESS_KEY" \
+                      --profile "dev"
+
+                  # verify
+                  aws sts get-caller-identity
